simple fullstack app(spring boot and react) with mockito tests

--- a/my-app/backend/src/main/resources/application.properties
+++ b/my-app/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Application Name
 spring.application.name=backend
 
 # Server Configuration
@@ -11,6 +12,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# H2 Console (optional - for viewing database)
+# H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Logging
+logging.level.com.example.demo=INFO
