adding config controller model service resources code

--- a/scheduler-app/backend/src/main/resources/application.properties
+++ b/scheduler-app/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=scheduling-tasks
+server.port=8080
+
+# Logging
+logging.level.com.example.schedulingtasks=INFO
+
+# Test properties (won't affect production)
+spring.main.lazy-initialization=false
