--- a/scheduler-app/backend/src/main/resources/application.properties
+++ b/scheduler-app/backend/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.application.name=scheduling-tasks-test
-server.port=0
-
-# Disable scheduling in tests by default
-spring.task.scheduling.enabled=false
-
-# Logging
-logging.level.com.example.schedulingtasks=DEBUG
+spring.application.name=scheduler
