--- a/scheduler-app/backend/pom.xml
+++ b/scheduler-app/backend/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>scheduling-tasks</artifactId>
+	<artifactId>scheduler</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>scheduling-tasks</name>
-	<description>scheduling-tasks Spring Boot project</description>
+	<name>scheduler</name>
+	<description>scheduler Spring Boot project</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -30,36 +30,21 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-websocket</artifactId>
-	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-test</artifactId>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-testcontainers</artifactId>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.testcontainers</groupId>
-		<artifactId>junit-jupiter</artifactId>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.awaitility</groupId>
-	    <artifactId>awaitility</artifactId>
-	    <scope>test</scope>
-	</dependency>
-</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
