build consumers backend

--- a/rest-consumer-project/consumer-backend/src/main/resources/application.properties
+++ b/rest-consumer-project/consumer-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=consumer
+server.port=8081
+
+# Quoters Service URL
+quoters.service.url=http://localhost:8080
+
+# Logging
+logging.level.com.example.consumer=INFO
+logging.level.org.springframework.web.client=DEBUG
