learning database handling in springboot

--- a/jdbc-customer-app/backend/src/main/resources/application.properties
+++ b/jdbc-customer-app/backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=relationaldataaccess
+server.port=8080
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:customerdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console (for debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Logging
+logging.level.com.example.relationaldataaccess=INFO
+logging.level.org.springframework.jdbc=DEBUG
