--- a/ldap-auth-system/backend/src/main/resources/application.properties
+++ b/ldap-auth-system/backend/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=ldapauth
 server.port=8080
 
-# LDAP Configuration
-spring.ldap.embedded.ldif=classpath:test-server.ldif
-spring.ldap.embedded.base-dn=dc=springframework,dc=org
-spring.ldap.embedded.port=8389
-
-# CORS
-spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:authdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
 
 # Logging
 logging.level.org.springframework.security=INFO
