--- a/file-upload-app/.vscode/settings.json
+++ b/file-upload-app/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "java.project.sourcePaths": ["backend/src/main/java", "backend/src/test/java"],
+    "java.project.outputPath": "backend/target/classes",
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
