--- a/chatapp/redis-chat/src/main/resources/application.properties
+++ b/chatapp/redis-chat/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=redis-chat
+server.port=8080
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Logging
+logging.level.com.example.redischat=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
