--- a/rabbitmq-tasks/rabbitmq-tasks/src/main/resources/application.properties
+++ b/rabbitmq-tasks/rabbitmq-tasks/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=rabbitmq-tasks
+server.port=8080
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin123
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:taskdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Logging
+logging.level.com.example.rabbitmqtasks=DEBUG
