--- a/accessingdataneo4j/src/main/resources/application.properties
+++ b/accessingdataneo4j/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# Neo4j Database Configuration
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=secret
+
+# Application Settings
 spring.application.name=accessingdataneo4j
+server.port=8080
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# Logging
+logging.level.org.springframework.data.neo4j=INFO
+logging.level.com.example.accessingdataneo4j=DEBUG
