--- a/accessingdataneo4j/src/main/resources/application.properties
+++ b/accessingdataneo4j/src/main/resources/application.properties
@@ -1,10 +1,10 @@
+spring.application.name=accessingdataneo4j
 # Neo4j Database Configuration
 spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=secret
+spring.neo4j.authentication.password=secretpass
 
 # Application Settings
-spring.application.name=accessingdataneo4j
 server.port=8080
 
 # Thymeleaf Configuration
